# fracres

./: .gitignore  CITATION.cff  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: scan_throughput.py
configs/: memory_task.yaml
docs/: knowledge_base.md  knowledge_base_v2.md
docs/legacy_starter/: README.md  abstract_fractional_reservoir_brain.py  fBm_noise_driver.py  fractional_nm_reservoir_brain.py  fractional_qsoc_reservoir_brain.py
examples/: besov_regularization.py  config_experiment.py  fit_ridge_readout.py  matignon_control.py  neural_field.py  run_fbm_driven.py  run_qsoc_simulation.py  signal_metrics.py  train_readout.py  validate_kernels.py  wilson_cowan.py
src/fracres/: __init__.py  config.py  drivers.py  kernels.py  metrics.py  models.py  readout.py  regularizers.py  reservoirs.py  stability.py  training.py  validation.py
tests/: test_config.py  test_hpfracc_crossref.py  test_kernel_properties.py  test_kernels.py  test_metrics.py  test_models.py  test_neural_field.py  test_readout.py  test_regularizer_validation.py  test_regularizers.py  test_stability.py  test_validation.py  test_wilson_cowan.py
tests/performance/: test_scan_scaling_perf.py
